--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
+# App_ENV=production
 APP_KEY=base64:yMvzYoaj7eNRnzuogUEPpfN/d5AAVdVTCvLG8UOukIA=
 APP_DEBUG=true
 APP_URL=http://localhost
+# APP_URL=127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,6 +16,13 @@ DB_PORT=3306
 DB_DATABASE=medisspro
 DB_USERNAME=root
 DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=118.139.166.127
+# DB_PORT=3306
+# DB_DATABASE=medisspro_test
+# DB_USERNAME=medisspro_test
+# DB_PASSWORD=0ti@v_ko.Qad
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
